actualizacion de interfaces 2

--- a/views/tutorial.html
+++ b/views/tutorial.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PMYSCURM - Tutorial</title>
-    <link rel="stylesheet" href="../../src/css/tutorial/paso1.css">
+    <link rel="stylesheet" href="../src/css/tutorial.css">
 </head>
 <body id="game-screen">
 
@@ -16,7 +16,7 @@
 
     <div class="character-container">
         <div class="character">
-            <img src="../../src/img/personaje.png" alt="Personaje Pixelado Guía" class="pixel-character-image">
+            <img src="../src/img/personaje.png" alt="Personaje Pixelado Guía" class="pixel-character-image">
         </div>
         <div class="dialog-bubble" id="dialog-bubble">
             </div>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="tutorial-image-container">
-             <img src="../../src/img/paso1.png" alt="Metodología SCRUM vs PMBOK" class="tutorial-image" id="step-image">
+             <img src="../src/img/paso1.png" alt="Metodología SCRUM vs PMBOK" class="tutorial-image" id="step-image">
         </div>
 
         <div class="navigation-controls">
@@ -37,6 +37,6 @@
         </div>
     </div>
 
-    <script src="../../src/js/tutorial.js"></script>
+    <script src="../src/js/tutorial.js"></script>
 </body>
 </html>
