--- a/views/intro.html
+++ b/views/intro.html
@@ -32,7 +32,7 @@
             </div>
          </div>
 
-         <button class="game-button tutorial-button" onclick="location.href='tutorial/paso1.html';">Ver Tutorial</button>
+         <button class="game-button tutorial-button" onclick="location.href='tutorial.html';">Ver Tutorial</button>
      </div>
 
 </body>
