Actualizacion de interfaces 3 (Vistas de teoria, hub de casos simulados, primer vista de dashboard para escenarios), añadida lógica en JS

--- a/views/intro.html
+++ b/views/intro.html
@@ -20,20 +20,19 @@
         </p>
 
         <div class="cards-container">
-            <div class="game-card">
+            <div class="game-card" onclick="location.href='teoria_hub.html';">
                 <img src="../src/img/PMBOK_Icon.png" alt="Icono PMBOK" class="card-icon">
                 <p>¡Aprende la teoría!</p>
                 <img src="../src/img/SCRUM_Icon.png" alt="Icono SCRUM" class="card-icon bottom-icon">
             </div>
 
-            <div class="game-card coming-soon">
-                <p class="blink">¡PRÓXIMAMENTE!</p>
+            <div class="game-card" onclick="location.href='simulacion_hub.html';">
                 <p>Simulación Interactiva</p>
             </div>
-         </div>
+        </div>
 
-         <button class="game-button tutorial-button" onclick="location.href='tutorial.html';">Ver Tutorial</button>
-     </div>
+        <button class="game-button tutorial-button" onclick="location.href='tutorial.html';">Ver Tutorial</button>
+    </div>
 
 </body>
 </html>
