--- a/views/intro.html
+++ b/views/intro.html
@@ -28,6 +28,7 @@
 
             <div class="game-card" onclick="location.href='simulacion_hub.html';">
                 <p>Simulación Interactiva</p>
+                <img src="../src/img/Simulacion_Icon.png" alt="Icono Simulacion" class="card-icon">
             </div>
         </div>
 
