Añadido de interfaces; estructura JS para la lectura de casos y metdologías

--- a/views/scrum.html
+++ b/views/scrum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PMYSCRUM - Simulación SCRUM</title>
-    <link rel="stylesheet" href="../src/css/prueba.css">
+    <link rel="stylesheet" href="../src/css/scrum.css">
 </head>
 
 <body id="game-screen">
@@ -42,7 +42,7 @@
 
     </div>
     
-    <script src="../js/scrum_game.js" type="module"></script>
+    <script src="../src/js/scrum_game.js" type="module"></script>
 
 </body>
 </html>
