--- a/views/simulacion_hub.html
+++ b/views/simulacion_hub.html
@@ -19,46 +19,43 @@
         <br>
         <p class="game-instruction">Casos de SCRUM</p>
         <div class="cards-container">
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="scrum" data-caso="1">
                 <p>Caso 1</p>
             </div>
 
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="scrum" data-caso="2">
                 <p>Caso 2</p>
             </div>
 
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="scrum" data-caso="3">
                 <p>Caso 3</p>
             </div>
 
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="scrum" data-caso="4">
                 <p>Caso 4</p>
             </div>
 
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="scrum" data-caso="5">
                 <p>Caso 5</p>
             </div>
         </div>
         <br>
         <p class="game-instruction">Casos de PMBOK</p>
         <div class="cards-container">
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="pmbok" data-caso="1">
                 <p>Caso 1</p>
             </div>
-
-            <div class="game-card" onclick="location.href='#';">
+            
+            <div class="game-card" data-metodologia="pmbok" data-caso="2">
                 <p>Caso 2</p>
             </div>
-
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="pmbok" data-caso="3">
                 <p>Caso 3</p>
             </div>
-
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="pmbok" data-caso="4">
                 <p>Caso 4</p>
             </div>
-
-            <div class="game-card" onclick="location.href='#';">
+            <div class="game-card" data-metodologia="pmbok" data-caso="5">
                 <p>Caso 5</p>
             </div>
         </div>
@@ -67,4 +64,6 @@
     </div>
 
 </body>
+
+    <script src="../src/js/simulacion_hub.js" type="module"></script>
 </html>
