Añadido de la música de fondo a las vistas

--- a/views/context.html
+++ b/views/context.html
@@ -30,8 +30,10 @@
             <button class="enter-button" onclick="location.href='simulacion_hub.html';">REGRESAR</button>
         </div>
     </div>
+
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
     
     </body>
 
-    <script src="../src/js/intro_proyecto.js" type="module"></script>
+    <script src="../src/js/intro_proyecto.js" src="../src/js/background_music.js" type="module"></script>
 </html>
