--- a/views/intro.html
+++ b/views/intro.html
@@ -35,5 +35,9 @@
         <button class="game-button tutorial-button" onclick="location.href='tutorial.html';">Ver Tutorial</button>
     </div>
 
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
+     <div id="content"></div>
+
+    <script src="../src/js/background_music.js" type="module"></script>
 </body>
 </html>
