--- a/views/scrum.html
+++ b/views/scrum.html
@@ -97,7 +97,11 @@
         
         </div>
     </div>
+
+    <audio id="miAudio" src="../src/audio/Ruins.mp3"></audio>
+
+
+    <script src="../src/js/background_music.js" type="module"> </script>
     
-    <script src="../src/js/scrum_game.js" type="module"></script>
 </body>
 </html>
