--- a/views/scrum_info.html
+++ b/views/scrum_info.html
@@ -73,7 +73,10 @@
         <button class="game-button" onclick="location.href='teoria_hub.html'">Regresar</button>
         <br><br>
 
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
 
     </div>
+
+    <script src="../src/js/background_music.js" type="module"></script>
 </body>
 </html>
