--- a/views/simulacion_hub.html
+++ b/views/simulacion_hub.html
@@ -63,7 +63,9 @@
         <button class="game-button tutorial-button" onclick="location.href='intro.html';">Regresar a Introducción</button>
     </div>
 
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
+
 </body>
 
-    <script src="../src/js/simulacion_hub.js" type="module"></script>
+    <script src="../src/js/simulacion_hub.js" src="../src/js/background_music.js" type="module"></script>
 </html>
