--- a/views/teoria_hub.html
+++ b/views/teoria_hub.html
@@ -33,5 +33,9 @@
         <br><br>
         <button class="game-button tutorial-button" onclick="location.href='intro.html';">Regresar a Introducción</button>
     </div>
+
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
+
+    <script src="../src/js/background_music.js" type="module"></script>
 </body>
 </html>
