--- a/views/tutorial.html
+++ b/views/tutorial.html
@@ -37,6 +37,8 @@
         </div>
     </div>
 
-    <script src="../src/js/tutorial.js"></script>
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
+
+    <script src="../src/js/tutorial.js" src="../src/js/background_music.js" type="module"></script>
 </body>
 </html>
