--- a/views/pmbok_info.html
+++ b/views/pmbok_info.html
@@ -76,5 +76,8 @@
     <br>
     <button class="game-button" onclick="location.href='teoria_hub.html'">Regresar</button>
     <br><br><br><br>
+    <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
+
+    <script src="../src/js/background_music.js" type="module"></script>
 </body>
 </html>
