--- a/views/simulacion_hub.html
+++ b/views/simulacion_hub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PMYSCURM - Introducción</title>
+    <title>PMYSCURM - Simulación</title>
     <link rel="stylesheet" href="../src/css/simulacion_hub.css"> 
 </head>
 <body id="game-screen">
