ajustes de audio

--- a/views/context.html
+++ b/views/context.html
@@ -35,5 +35,6 @@
     
     </body>
 
-    <script src="../src/js/intro_proyecto.js" src="../src/js/background_music.js" type="module"></script>
+    <script src="../src/js/intro_proyecto.js" type="module"></script>
+    <script src="../src/js/background_music.js" type="module"></script>
 </html>
