--- a/views/simulacion_hub.html
+++ b/views/simulacion_hub.html
@@ -67,5 +67,6 @@
 
 </body>
 
-    <script src="../src/js/simulacion_hub.js" src="../src/js/background_music.js" type="module"></script>
+    <script src="../src/js/simulacion_hub.js" type="module"></script>
+    <script src="../src/js/background_music.js" type="module"></script>
 </html>
