--- a/views/tutorial.html
+++ b/views/tutorial.html
@@ -39,6 +39,7 @@
 
     <audio id="miAudio" src="../src/audio/Ruins.mp3" autoplay loop muted></audio>
 
-    <script src="../src/js/tutorial.js" src="../src/js/background_music.js" type="module"></script>
+    <script src="../src/js/tutorial.js" type="module"></script>
+    <script src="../src/js/background_music.js" type="module"></script>
 </body>
 </html>
