--- a/views/scrum.html
+++ b/views/scrum.html
@@ -28,7 +28,7 @@
                 </div>
                 
                 <div class="stat-row">
-                    <div class="stat-label">PRESUPUESTO</div>
+                    <div class="stat-label">COSTOS</div>
                     <div class="progress-bar-container">
                         <div id="bar-presupuesto" class="progress-bar-fill"></div>
                         <span id="value-presupuesto" class="progress-bar-value">100%</span>
@@ -101,7 +101,7 @@
     <audio id="miAudio" src="../src/audio/Ruins.mp3"></audio>
 
 
+    <script src="../src/js/scrum_game.js" type="module"> </script>
     <script src="../src/js/background_music.js" type="module"> </script>
-    
 </body>
 </html>
